--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,11 @@
 # action.yml
-name: 'Hello World'
+name: '[DEMO] Hello World Public'
 description: 'Greet someone and record the time'
 inputs:
   who-to-greet:  # id of input
     description: 'Who to greet'
     required: true
-    default: 'World'
+    default: 'I'm a public action'
 outputs:
   time: # id of output
     description: 'The time we greeted you'
