--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
   who-to-greet:  # id of input
     description: 'Who to greet'
     required: true
-    default: 'I'm a public action'
+    default: 'World! I''m a public action'
 outputs:
   time: # id of output
     description: 'The time we greeted you'
