Add author to action.yml

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,6 @@
 # action.yml
 name: '[DEMO] Hello World Public'
+author: "Ruud Goossens"
 description: 'Greet someone and record the time'
 inputs:
   who-to-greet:  # id of input
